# USTC-Tenhou

./: CMakeLists.txt
Mahjong/: Action.cpp  Player.cpp  Player.h  ScoreCounter.cpp  Table.cpp  Table.h  Tile.h  Yaku.h
test/: CMakeLists.txt  GameManager.cpp  GameManager.h  MainWindow.cpp  MainWindow.h  Network.cpp  Network.h  PageManager.h  UIManager.cpp  UIManager.h  main.cpp
test/pages/: AboutPage.cpp  AboutPage.h  ConsolePage.cpp  ConsolePage.h  CreateRoomPage.cpp  CreateRoomPage.h  HelpPage.cpp  HelpPage.h  JoinRoomPage.cpp  JoinRoomPage.h  MainMenuPage.cpp  MainMenuPage.h  PageRenderer.h
